# dz10

./: README.md  dao.py  database.py  models.py  pyproject.toml  settings.py
migrations/: env.py
migrations/versions/: 2024_02_05_1829-fdd8b7874c3d_initial.py  2024_02_11_1644-12d45c4f7f2f_creation_of_addresses.py  2024_02_11_1705-45153b1c2820_adding_index_column_to_the_addresses.py  2024_02_11_1712-7cda0b2d7d7c_adding_street_column.py  2024_02_12_1931-7cd9ce3f9752_adding_street_column_2_take.py  2024_03_03_1651-a19ec3910cf3_adding_order_table.py  2024_03_13_1824-190bf95e9a68_adding_order_table.py  2024_03_28_2234-a978edf51ed7_tools_for_crud_requests_for_order_table.py  2024_03_30_1818-1f7a5180f1b2_deleting_timur_3.py
