[tool.poetry]
name = "dz10-1"
version = "0.1.0"
description = ""
authors = ["Nesterenko Iryna <irane100r@gmail.com>"]
readme = "README.md"
packages = [{include = "dz10"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
fastapi = {extras = ["all"], version = "^0.109.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
